2008-06-16 Josef Cacek
  * basic support for PDF signature verification (command line controlled)

2008-05-20 Josef Cacek
  * enable/disable image field in visible signatures - depends on rendering mode
  * update documentation

2008-05-08 Josef Cacek
  * show page bounds in visible signature

2008-04 Josef Cacek
  * implementing visible signature

2008-03-27 Josef Cacek
  * fix for Java 5 (disable JDialog.setIconImage)

2008-03-26 Josef Cacek
  * support for encrypted documents
  * setting rights in the encrypted result PDFs
  * multiple keys in keystore support
  * append signature support
  * windows installer
  * updated guide

2008-02-11 Josef Cacek
  * signing PDF documents
  * OpenOffice.org Add-On
  * English & Czech language