@@ -1,10 +1,11 @@
 package net.sf.jsignpdf;
 
+import java.io.File;
 import java.io.FileInputStream;
 import java.io.InputStream;
 import java.security.KeyStore;
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Enumeration;
 import java.util.List;
 import java.util.Set;
 
@@ -14,20 +15,11 @@ import java.util.Set;
  */
 public class KeyStoreUtils {
 
-	private SignerOptions options;
-
-	public KeyStoreUtils() {
-	}
-
-	public KeyStoreUtils(final SignerOptions anOpts) {
-		options = anOpts;
-	}
-
 	/**
 	 * Returns array of supported KeyStores
 	 * @return String array with supported KeyStore implementation names
 	 */
-	public String[] getKeyStrores() {
+	public static String[] getKeyStores() {
 		final Set<String> tmpKeyStores = java.security.Security.getAlgorithms("KeyStore");
 		final List<String> tmpResult = new ArrayList<String>(tmpKeyStores);
 		return tmpResult.toArray(new String[tmpResult.size()]);
@@ -37,27 +29,25 @@ public class KeyStoreUtils {
 	 * Loads key names (aliases) from the keystore
 	 * @return array of key aliases
 	 */
-	public String[] getAliases() {
-		//jaka je performance? nemel by to byt take specialni thread?
+	public static String[] getKeyAliases(final SignerOptions options) {
 		if (options==null) {
 			throw new NullPointerException("Options are empty.");
 		}
 		final List<String> tmpResult = new ArrayList<String>();
 		try {
 			options.log("console.getKeystoreType", options.getKsType());
-			final KeyStore tmpKs = KeyStore.getInstance(options.getKsType());
-			InputStream tmpIS = null;
-			char[] tmpPass = null;
-			if (!StringUtils.isEmpty(options.getKsFile())) {
-				tmpIS = new FileInputStream(options.getKsFile());
-			}
-			if (options.getKsPasswd()!=null && options.getKsPasswd().length>0) {
-				tmpPass = options.getKsPasswd();
-			}
-			options.log("console.loadKeystore", options.getKsFile());
-			tmpKs.load(tmpIS, tmpPass);
+			final KeyStore tmpKs = loadKeyStore(options.getKsType(),
+				options.getKsFile(), options.getKsPasswd());
+
 			options.log("console.getAliases");
-			tmpResult.addAll(Collections.list(tmpKs.aliases()));
+//			tmpResult.addAll(Collections.list(tmpKs.aliases()));
+			final Enumeration<String> tmpAliases = tmpKs.aliases();
+			while (tmpAliases.hasMoreElements()) {
+				final String tmpAlias = tmpAliases.nextElement();
+				if (tmpKs.isKeyEntry(tmpAlias)) {
+					tmpResult.add(tmpAlias);
+				}
+			}			
 			options.fireSignerFinishedEvent(true);
 		} catch (Exception e) {
 			options.log("console.exception");
@@ -67,12 +57,116 @@ public class KeyStoreUtils {
 		return tmpResult.toArray(new String[tmpResult.size()]);
 	}
 
-	public SignerOptions getOptions() {
-		return options;
+	/**
+	 * Loads certificate names (aliases) from the given keystore
+	 * @return array of certificate aliases
+	 */
+	public static String[] getCertAliases(KeyStore tmpKs) {
+		if (tmpKs==null) return null;
+		final List<String> tmpResult = new ArrayList<String>();
+		try {
+			final Enumeration<String> tmpAliases = tmpKs.aliases();
+			while (tmpAliases.hasMoreElements()) {
+				final String tmpAlias = tmpAliases.nextElement();
+				if (tmpKs.isCertificateEntry(tmpAlias)) {
+					tmpResult.add(tmpAlias);
+				}
+			}			
+		} catch (Exception e) {
+			e.printStackTrace();
+			return null;
+		}
+		return tmpResult.toArray(new String[tmpResult.size()]);
+	}	
+
+	/**
+	 * Loads certificate names (aliases) from the given keystore
+	 * @param aKsType
+	 * @param aKsFile
+	 * @param aKsPasswd
+	 * @return array of certificate aliases
+	 */
+	public static String[] getCertAliases(String aKsType, String aKsFile, String aKsPasswd) {
+		return getCertAliases(loadKeyStore(aKsType, aKsFile, aKsPasswd));
 	}
 
-	public void setOptions(SignerOptions options) {
-		this.options = options;
+	/**
+	 * Opens given keystore.
+	 * @param aKsType
+	 * @param aKsFile
+	 * @param aKsPasswd
+	 * @return
+	 */
+	public static KeyStore loadKeyStore(String aKsType, 
+		final String aKsFile, final String aKsPasswd) {
+		char[] tmpPass = null;
+		if (aKsPasswd!=null) {
+			tmpPass = aKsPasswd.toCharArray();
+		}			
+		return loadKeyStore(aKsType, aKsFile, tmpPass);
+	}
+
+	/**
+	 * Opens given keystore.
+	 * @param aKsType
+	 * @param aKsFile
+	 * @param aKsPasswd
+	 * @return
+	 */
+	public static KeyStore loadKeyStore(String aKsType, 
+		final String aKsFile, final char[] aKsPasswd) {
+
+		if (StringUtils.isEmpty(aKsType) && StringUtils.isEmpty(aKsFile)) {
+			return loadCacertsKeyStore(null);
+		}
+
+		if (StringUtils.isEmpty(aKsType)) {
+			aKsType = KeyStore.getDefaultType();
+		}
+
+		KeyStore tmpKs = null;
+		InputStream tmpIS = null;
+		try {
+			tmpKs = KeyStore.getInstance(aKsType);
+			if (!StringUtils.isEmpty(aKsFile)) {
+				tmpIS = new FileInputStream(aKsFile);
+			}
+			tmpKs.load(tmpIS, aKsPasswd);
+		} catch (Exception e) {
+			e.printStackTrace();
+			return null;
+		} finally {
+			if (tmpIS!=null) try { tmpIS.close(); } catch (Exception e) {}
+		}
+		return tmpKs;
+	}
+
+
+	/**
+	 * Loads the default root certificates at &lt;java.home&gt;/lib/security/cacerts.
+	 * @param provider the provider or <code>null</code> for the default provider
+	 * @return a <CODE>KeyStore</CODE>
+	 */    
+	public static KeyStore loadCacertsKeyStore(String provider) {
+		File file = new File(System.getProperty("java.home"), "lib");
+		file = new File(file, "security");
+		file = new File(file, "cacerts");
+		FileInputStream fin = null;
+		try {
+			fin = new FileInputStream(file);
+			KeyStore k;
+			if (provider == null)
+				k = KeyStore.getInstance("JKS");
+			else
+				k = KeyStore.getInstance("JKS", provider);
+			k.load(fin, null);
+			return k;
+		} catch (Exception e) {
+			e.printStackTrace();
+			return null;
+		} finally {
+			try{if (fin != null) {fin.close();}}catch(Exception ex){}
+		}
 	}
 
 }
